--- a/assets/custom.css
+++ b/assets/custom.css
@@ -413,14 +413,17 @@ textarea#description {
   font-size: 1rem;
   vertical-align: middle;
 }
+.ginform {
+  padding-bottom: 150px;
+}
 .ginform form {
   margin: auto;
   width: 800px!important;
 }
-.ginform form .ui.message,
+.ginform form .ui.message {
   text-align: center;
 }
-.ginform form .header, {
+.ginform form .header {
   padding-left: 280px !important;
 }
 .ginform form .inline.field > label {
